--- a/Mango.Services.Identity/appsettings.json
+++ b/Mango.Services.Identity/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:mangores.database.windows.net,1433;Initial Catalog=MangoIdentityServer;Persist Security Info=False;User ID=mangores;Password=Mango123$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
